# c2c-compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: .gitignore  CMakeLists.txt
src/ast/: ast.cpp  ast.h  ast_visitor.cpp  ast_visitor.h  c2c_grammar.gram
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/preprocessor/: pp_common.h  pp_lexer.cpp  pp_lexer.h  pp_macroprocessor.cpp  pp_macroprocessor.h  pp_token.h  preprocessor.h
src/tokenizer/: token.h  tokenizer.cpp  tokenizer.h
tests/lexer/: CMakeLists.txt  lexer_tests.cpp
tests/preprocessor/: CMakeLists.txt  char_constants.cpp  identifiers.cpp  macro.cpp  number_literals.cpp  overall.cpp  string_literals.cpp
